--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "abnjain",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "chess.js": "^1.0.0-beta.8",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "path": "^0.12.7",
-    "socket.io": "^4.7.5"
+    "postcss": "^8.4.38",
+    "socket.io": "^4.7.5",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "debug": "^4.3.4"
