--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "bcrypt": "^5.1.1",
     "chess.js": "^1.0.0-beta.8",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "path": "^0.12.7",
     "postcss": "^8.4.38",
     "socket.io": "^4.7.5",
