--- a/package.json
+++ b/package.json
@@ -5,25 +5,33 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "build:css": "npx tailwindcss -i ./public/styles/styles.css -o ./public/styles/tailwind.css --watch"
   },
   "author": "abnjain",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "chess.js": "^1.0.0-beta.8",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
+    "express-socket.io-session": "^1.3.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
-    "postcss": "^8.4.38",
-    "socket.io": "^4.7.5",
-    "tailwindcss": "^3.4.3"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "debug": "^4.3.4"
+    "autoprefixer": "^10.4.19",
+    "debug": "^4.3.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
