--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "chess.js": "^1.0.0-beta.8",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-flash": "^0.0.2",
